--- a/Assignment1/2-figure.html
+++ b/Assignment1/2-figure.html
@@ -1,4 +1,9 @@
-<fieldset>
+<html lang="en">
+  <head>
+      <meta charset="utf-8">
+      <title>Assignment1-2-figure</title>
+  </head>
+  <body>
     <figure>
       <img src="http://placekitten.com/800/300" alt="Sleepy Kitten">
       <br> Sleepy Kitten
@@ -11,4 +16,5 @@
       <img src="http://placekitten.com/400/400" alt="Smol Kitten">
       <br> Smol Kitten
     </figure>
-  </fieldset>
+  </body>
+</html>
