--- a/Assignment1/1-navbar.html
+++ b/Assignment1/1-navbar.html
@@ -1,16 +1,15 @@
-<form>
-    <fieldset>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Order</a></li>
-          <li><a href="#">Catering</a></li>
-          <li><a href="#">Contact</a></li>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-        </ul>
-    </fieldset>
-</form>
+<html lang="en">
+  <head>
+      <meta charset="utf-8">
+      <title>Assignment1-1-navbar</title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Menu</a></li>
+      <li><a href="#">Order</a></li>
+      <li><a href="#">Catering</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </body>
+</html>
