kind finish Ass2
take some time, but finish most problem at last.

--- a/Assignment2/3-navbar.html
+++ b/Assignment2/3-navbar.html
@@ -1,15 +1,18 @@
+<link rel="stylesheet" type="text/css" href="3-navbar.css">
 <html lang="en">
   <head>
       <meta charset="utf-8">
       <title>Assignment1-1-navbar</title>
   </head>
   <body>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Menu</a></li>
-      <li><a href="#">Order</a></li>
-      <li><a href="#">Catering</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+    <fieldset>
+      <div style = "text-align:center;">
+        <button type = "button">Home</button>
+        <button type = "button">Menu</button>
+        <button type = "button">Order</button>
+        <button type = "button">Catering</button>
+        <button type = "button">Contact</button>
+      </div>
+    </fieldset>
   </body>
 </html>
