--- a/Assignment2/5-survey.html
+++ b/Assignment2/5-survey.html
@@ -6,19 +6,19 @@
     </head>
     <body>
         <form action="Survey" method="get" class="form1">
-                <legend>CS 410P/510 - Intro Survey</legend>
                 <h1>CS 410P/510 - INTRO SURVEY</h4>
                 <div class="name">
                     <label for="name">Name: </label>
-                    <input type="text" name="name" id="name" required>
+                    <input type="text" name="name" id="name" required> 
                 </div>
+                <br>
                 <div class="email">
                 <label for="email">Email: </label>
                 <input type="email" name="email" id="email" required>
                 </div>
                 <br>
                 <div>
-                    <h4>Registration Status</h4>
+                    <h4>Registration Status:</h4>
                     <select type="number" name="choice">
                     <option value="first">Unregistered</option>
                     <option value="second" selected>Registered</option>
@@ -48,10 +48,10 @@
                 <br>
                 <div>
                     <h4>What would you like to learn and accomplish in this class?</h4>
-                    <textarea id="story" name="story" rows="5" cols="33" resize=""></textarea>
+                    <textarea id="story" name="story" rows="5" cols="100" resize=""></textarea>
                     <br>
                     <h4>Do you have any project ideas?</h4>
-                    <textarea id="story" name="story" rows="5" cols="33" resize=""></textarea>
+                    <textarea id="story" name="story" rows="5" cols="100" resize=""></textarea>
                 </div>
                 <br>
                 <div>
