--- a/Assignment2/2-navbar.html
+++ b/Assignment2/2-navbar.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <fieldset>
-      <button type = "button">Home</button>
-      <button type = "button">Menu</button>
-      <button type = "button">Order</button>
-      <button type = "button">Catering</button>
-      <button type = "button">Contact</button>
+      <div style = "text-align:center;">
+        <button type = "button">Home</button>
+        <button type = "button">Menu</button>
+        <button type = "button">Order</button>
+        <button type = "button">Catering</button>
+        <button type = "button">Contact</button>
+      </div>
     </fieldset> 
   </body>
 </html>
