--- a/Assignment3/1-form.html
+++ b/Assignment3/1-form.html
@@ -1,68 +1,77 @@
+
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Assignment1-4-survey</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href=​https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.m in.css/>
     </head>
     <body>
-        <form action="Survey" method="get" class="form1">
-            <fieldset>
-                <legend>CS 410P/510 - Intro Survey</legend>
-                <div class="name">
-                    <label for="name">Enter your name: </label>
-                    <input type="text" name="name" id="name" required>
+        <div class="container">
+            <h1 class="text-center">CS 410P/510 - Intro Survey</h1>
+            <br>
+            <form>
+                <div class="basic">
+                    <label class="font-weight-bold" for="name">Name:</label>
+                    <input type="text" class="form-control" id="name" placeholder="enter name">
                 </div>
-                <div class="email">
-                <label for="email">Enter your email: </label>
-                <input type="email" name="email" id="email" required>
+                <div class="basic">
+                    <label class="font-weight-bold" for="email">Email:</label>
+                    <input type="email" class="form-control" id="name" placeholder="enter email">
                 </div>
                 <br>
-                <div>
-                    Registration Status
-                    <select type="number" name="choice">
-                    <option value="first">Unregistered</option>
-                    <option value="second" selected>Registered</option>
+                <div class="dropdown">
+                    <label class="font-weight-bold" for="status">Registration Status</label>
+                    <p>
+                    <select type="number" class="choice">
+                        <option value="first">Registered</option>
+                        <option value="second">Unregistered</option>
                     </select>
                 </div>
-                <div>
-                    <p>Class Section</p>
-                    <input type="radio" id="410P" name="410r" value="410">
+                <br>
+                <div class="radio">
+                    
                     <label for="410P">410P</label>
-                    <input type="radio" id="510" name="510r" value="510">
+                    <input type="radio" id="410P" name="410r" value="410">
                     <label for="510">510</label>
+                    <input type="radio" id="510" name="510" value="510">
                 </div>
-                <div>
-                    <p>Have you taken any of these courses?</p>
-                    <input type="checkbox" id="PLB" name="PLB">
-                    <label for="PL">Programing Languages<label>
+                <br>
+                <div class="question">
+                    <p class="font-weight-bold">Have you taken any of these courses?</p>
+                    <label for="PL">Programing Languages</label>
+                    <input type="checkbox" id="PLB" name="PLB" checked>
                     <br>
-                    <input type="checkbox" id="OSB" name="OSB" checked>
                     <label for="OS">Operating System</label>
-                    <br>
-                    <input type="checkbox" id="FSWDB" name="FSWDB" checked>
+                    <input type="checkbox" id="OSB" name="OSB" checked>
+                    <br>                   
                     <label for="FSWD">Full Stack Web Development</label>
-                    <br>
-                    <input type="checkbox" id="SEB" name="SEB">
-                    <label for="SE">Software Engineering</label>
+                    <input type="checkbox" id="FSWDB" name="FSWDB" checked>
                 </div>
                 <br>
-                <div>
-                    <p>What would you like to learn and accomplish in this class?</p>
-                    <textarea id="story" name="story" rows="5" cols="33" resize=""></textarea>
+                <div class="textbox">
+                    <p class="font-weight-bold">What would you like to learn and accomplish in this class?</p>
+                    <textarea id="story" class="story" rows="5" cols="50" resize=""></textarea>
                     <br>
-                    <p>Do you have any project ideas?</p>
-                    <textarea id="story" name="story" rows="5" cols="33" resize=""></textarea>
+                    <p class="font-weight-bold">Do you have any project ideas?</p>
+                    <textarea id="story" class="story" rows="5" cols="50" resize=""></textarea>
                 </div>
                 <br>
-                <div>
-                    <input type="checkbox" id="PLB" name="PLB">
+                <div class="conform">
+                    <input type="checkbox" id="PLB" class="PLB" checked>
                     <label for="PL">I already have a group for the final project</label>
                 </div>
-                <br>
-                <div class="controls">
-                    <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
-                </div>
-            </fieldset>
-        </form>
+            </div>   
+            <br>
+            <div class="container">
+                <button class="btn btn-primary btn-sm" type="submit">Submit</button>
+                <button class="btn btn-secondary btn-sm" type="reset">Reset</button>
+            </form>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
